--- a/portfolio/blog/templates/blog/blogs.html
+++ b/portfolio/blog/templates/blog/blogs.html
@@ -56,30 +56,26 @@
                 <!-- Right col-->
                 <div class="col-md-3">
                     <h2 style="font-size:x-large;">Catégories</h2>
-                    <div class="container">
-                        <ul>
-                            <li>Astuces</li>
-                            <li>Développement</li>
-                            <li>Événements</li>
-                            <li>Blockchain</li>
-                            <li>Divers</li>
-                        </ul>
+                    <div>
+                        <span style="list-style-type: none; margin-left: 3px;"><a href="#">Astuces</a></span><br>
+                        <span style="list-style-type: none; margin-left: 3px;"><a href="#">Développement</a></span><br>
+                        <span style="list-style-type: none; margin-left: 3px;"><a href="#">Événements</a></span><br>
+                        <span style="list-style-type: none; margin-left: 3px;"><a href="#">Blockchain</a></span><br>
+                        <span style="list-style-type: none; margin-left: 3px;"><a href="#">Divers</a></span><br>
                     </div>
                     <h2 style="font-size:x-large;">Les derniers articles</h2>
                     <div>
-                        <ul style="margin-left:-7%;">
-                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                            <hr>
-                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                            <hr>
-                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                            <hr>
-                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                            <hr>
-                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                            <hr>
-                            <li style="font-size: small; list-style-type: none">23/09 - Blog : Stage de la Toussaint</li>
-                        </ul>
+                      <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
+                      <hr>
+                      <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
+                      <hr>
+                      <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
+                      <hr>
+                      <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
+                      <hr>
+                      <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
+                      <hr>
+                      <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
                     </div>
                 </div>
             </div>
