--- a/portfolio/blog/templates/blog/blogs.html
+++ b/portfolio/blog/templates/blog/blogs.html
@@ -55,16 +55,16 @@
                 </div>
                 <!-- Right col-->
                 <div class="col-md-3">
-                    <h2 style="font-size:x-large;">Catégories</h2>
-                    <div>
+                    <h2 class="bg-light" style="font-size:x-large;">Catégories</h2>
+                    <div class="bg-light" style="margin-bottom: 10px;">
                         <span style="list-style-type: none; margin-left: 3px;"><a href="#">Astuces</a></span><br>
                         <span style="list-style-type: none; margin-left: 3px;"><a href="#">Développement</a></span><br>
                         <span style="list-style-type: none; margin-left: 3px;"><a href="#">Événements</a></span><br>
                         <span style="list-style-type: none; margin-left: 3px;"><a href="#">Blockchain</a></span><br>
                         <span style="list-style-type: none; margin-left: 3px;"><a href="#">Divers</a></span><br>
                     </div>
-                    <h2 style="font-size:x-large;">Les derniers articles</h2>
-                    <div>
+                    <h2 class="bg-light" style="font-size:x-large;">Les derniers articles</h2>
+                    <div class="bg-light">
                       <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
                       <hr>
                       <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
