--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -24,6 +24,7 @@
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav">
                             <a href="{% url 'index' %}" class="nav-item nav-link active" style="font-weight:bold;">Acceuil</a>
+                            <a href="{% url 'blogs' %}" class="nav-item nav-link" style="font-weight:bold;">Projets</a>
                             <a href="{% url 'blogs' %}" class="nav-item nav-link" style="font-weight:bold;">Blog</a>
                         </div>
                         <div class="navbar-nav ms-auto">
