--- a/portfolio/vitrine/templates/vitrine/index.html
+++ b/portfolio/vitrine/templates/vitrine/index.html
@@ -6,12 +6,18 @@
             <div class="row">
                 <!-- Left col -->
                 <div class="col-md-3">
-                    <img src="../app/../../static/img/vitrine/me.jpg" width="100%">
+                    <img src="../app/../../static/img/vitrine/me.jpg" width="100%" style="margin-bottom: 10px;">
                     <div>
                         <h3 style="font-size:larger;">À propos de moi</h3>
-                        <p style="font-size: smaller;">J'ai 23 ans Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium corporis praesentium quia aliquid debitis magnam ullam quis necessitatibus tempora blanditiis et quos reprehenderit, ab aut quaerat sequi illum voluptas est.</p> 
+                        <p style="font-size: smaller;">Hello world ! Je suis Mava Malonga Alpha, j'ai 24 ans, je suis développeur informatique,
+                            et en dehors de ma passion pour l'informatique, j'aime jouer et parler de football.
+                           Je vous souhaite la bienvenue sur mon site personnel. <br><br>
+                           C’est ici que je partage les péripéties de ma vie de développeur, la veille que 
+                           je pratique au quotidien, quelques projets personnels et que je présente certains événements auxquels je participe.<br><br>
+                           J’espère que ça va vous plaire ! Si vous souhaitez bavarder, si vous avez des questions ou des remarques, si vous souhaitez 
+                           juste me dire bonjour ou me payer un café, n’hésitez pas à me contacter.</p> 
                         <hr>
-                        <h3 style="font-size:larger;">Restons en contact</h3>
+                        <h3 style="font-size:larger;">Me contacter</h3>
                         <div class="row">
                             <div class="col">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" style="color:#ff9c00" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
@@ -137,7 +143,7 @@
                         </div>
                     </div>
                     <h2 style="font-size:x-large;">Articles</h2>
-                    <div>
+                    <div class="container bg-light" width="100%" hight="100%">
                         {% if articles is not None %}
                             {% for article in articles %}
                                 <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
