--- a/portfolio/vitrine/templates/vitrine/index.html
+++ b/portfolio/vitrine/templates/vitrine/index.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <!-- Left col -->
                 <div class="col-md-3">
-                    <img src="../app/../../static/img/vitrine/me.jpg" width="100%" style="margin-bottom: 10px;">
+                    <img src="../app/../../static/img/vitrine/me.jpg" width="100%" style="margin-bottom: ;">
                     <div>
                         <h3 style="font-size:larger;">À propos de moi</h3>
                         <p style="font-size: smaller;">Hello world ! Je suis Mava Malonga Alpha, j'ai 24 ans, je suis développeur informatique,
@@ -46,9 +46,9 @@
                 <div class="col-md-6">
                     <h2 style="font-size:x-large;">Expériences</h2>
                     <div class="container bg-light" style="font-size: 11px;">
-                        <h3 style="font-size:large; color: #ff9c00;">Orange County Lettings</h3>
-                        <b>Projet Openclassrooms Mai 2022</b>
-                        <p>Contexte : Orange County Lettings est une start-up dans le secteur de la location de biens immobiliers. La start-up est en pleine phase d’expansion aux États-Unis.<br>
+                        <h3 style="font-size:large; color: #ff9c00;">My-Portfolio</h3>
+                        <b>Projet personnel Mai 2022</b>
+                        <p>Mon portfolio personnel https://alpha-mavamalonga.herokuapp.com/ qui présente certains de mes projets github ainsi que mon CV et mes compétences techniques.<br>
                         <span>Mes tâches</span></p>
                         <ul style="margin-top: -2%; padding-bottom: 10px;">
                             <li>Gérer la production de code en utilisant la méthodologie CI/CD avec CircleCi</li>
@@ -75,17 +75,23 @@
                     <div class="container bg-light" style="font-size: 11px;">
                         <h3 style="font-size:large; color: #ff9c00;">Openclassrooms - Développeur d'application Python</h3>
                         <b>Paris - 2020 à 2022</b>
-                        <p style="padding-bottom: 10px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minus atque quae rerum accusantium, similique autem iste sapiente fugit. Quo modi aliquid autem velit magnam excepturi harum id quod repudiandae?</p>
+                        <p style="padding-bottom: 10px;">
+                            Spécialisation en développement d'application python via Openclassrooms.<br>
+                            La formation Openclassrooms se découpe en 13 projets professionalisant d'une complexité croissante, essentielement des projet faite en python.
+                            Ce parcours forme à un métier de développeur back-end python, en plus de python on voit des technos telles que SQL, Javascript,
+                            les conteneur avec Docker et l'automatisation des taches CI/CD avec Circle et Heroku.</p>
                     </div>
                     <div class="container bg-light" style="font-size: 11px;">
                         <h3 style="font-size:large; color: #ff9c00;">Licence Science pour l'Ingénieur (SPI)</h3>
                         <b>Paris Saclay - 2017 à 2020</b>
-                        <p style="padding-bottom: 10px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minus atque quae rerum accusantium, similique autem iste sapiente fugit. Quo modi aliquid autem velit magnam excepturi harum id quod repudiandae?</p>
+                        <p style="padding-bottom: 10px;">Découverte de l'informatique.<br>
+                            La licence m'a apportée les bases de la programmation (les structures conditionnels, les boucles, les variables)
+                            J'ai écris mes 1er lignes de code avec le langage processing, par la suite, j'ai fais de l'assembleur et des projets de modélisation en python.</p>
                     </div>
                     <div class="container bg-light" style="font-size: 11px;">
                         <h3 style="font-size:large; color: #ff9c00;">Bac Scientifique (S)</h3>
                         <b>Lycée Maurice Eliot - 2014 à 2017</b>
-                        <p style="padding-bottom: 10px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minus atque quae rerum accusantium, similique autem iste sapiente fugit. Quo modi aliquid autem velit magnam excepturi harum id quod repudiandae?</p>
+                        <p style="padding-bottom: 10px;">Enseignement scientifique : mathématiques, algorithmes, physique chimie, SVT...<br></p>
                     </div>
                 </div>
                 <!-- Right col-->
