--- a/portfolio/vitrine/templates/vitrine/index.html
+++ b/portfolio/vitrine/templates/vitrine/index.html
@@ -51,17 +51,18 @@
                         <p>Mon portfolio personnel https://alpha-mavamalonga.herokuapp.com/ qui présente certains de mes projets github ainsi que mon CV et mes compétences techniques.<br>
                         <span>Mes tâches</span></p>
                         <ul style="margin-top: -2%; padding-bottom: 10px;">
+                            <li>Développer une application web en utilisant Django</li>
+                            <li>Développer la partie Front-End d’une application avec HTML, CSS et JavaScript</li>
                             <li>Gérer la production de code en utilisant la méthodologie CI/CD avec CircleCi</li>
-                            <li>Mettre en place un système de contrôle des codes en utilisant Sentry</li>
-                            <li>Refactoriser une application pour réduire la dette technique</li>
-                            <li>Appliquez une architecture modulaire dans une application Python</li>
+                            <li>Implémentee une suite de tests Python</li>
+                            <li>Mettre en place un intérface graphique CRM</li>
                             <li>Déployer une application en utilisant Heroku</li>
                         </ul>
                     </div>
                     <div class="container bg-light" style="font-size: 11px;">
-                        <h3 style="font-size:large; color: #ff9c00;">Orange County Lettings</h3>
-                        <b>Projet Openclassrooms Mai 2022</b>
-                        <p>Contexte : Orange County Lettings est une start-up dans le secteur de la location de biens immobiliers. La start-up est en pleine phase d’expansion aux États-Unis.<br>
+                        <h3 style="font-size:large; color: #ff9c00;">Football Club ASL</h3>
+                        <b>Projet bénévole Mai 2022</b>
+                        <p>Création d'une application web en collaboration avec un club de football.<br>
                         <span>Mes tâches</span></p>
                         <ul style="margin-top: -2%; padding-bottom: 10px;">
                             <li>Gérer la production de code en utilisant la méthodologie CI/CD avec CircleCi</li>
