--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -19,7 +19,7 @@
     <!-- Header -->
     <div class="container-fluid">
         <div class="container">
-            <h1 style="font-size: large; font-family: 'Courier New', Courier, monospace; margin-top: 10px;"><b>MAVA MALONGA Alpha<br><span style="color:#ff9c00; ">Développeur Python & DevOps</span></b></h1>
+            <h1 style="font-size: large; font-family: 'Courier New', Courier, monospace; margin-top: 10px;"><b>MAVA MALONGA Alpha<br><span style="color:#ff9c00; ">Développeur Back-end Python & Django</span></b></h1>
             <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(0, 0, 0, 0.05);; margin-bottom: 10px; height: 30px;">
                 <div class="container-fluid" style="padding: 0;">
                     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
