--- a/portfolio/vitrine/templates/vitrine/index.html
+++ b/portfolio/vitrine/templates/vitrine/index.html
@@ -209,17 +209,38 @@
                     </div>
                     <h2 style="font-size:x-large;">Centre d'intérêt</h2>
                     <div>
-                        <div>
-                            <span style="font-size: medium; color: #ff9c00;">Football</span>
-                            <p style="font-size:x-small; margin-left: 3px">- Activité sportive loisir<br>- Supporteur de l'Olympique Lyonnais</p>
+                        <div class="container" style="margin-top: 30px;">
+                            <div class="row">
+                                <div class="col-md-2">
+                                    <img src="../../static/img/vitrine/book.png" width="30px" height="30px">
+                                </div>
+                                <div class="col-md-10">
+                                    <span style="font-size: medium; color: #ff9c00;">Lecture</span>
+                                    <p style="font-size:x-small; margin-left: 3px">- Développement personnel<br>- Histoire<br>- Aventure<br>- Fantaisie</p>        
+                                </div>
+                            </div>
                         </div>
-                        <div>
-                            <span style="font-size: medium; color: #ff9c00;">Lecture</span>
-                            <p style="font-size:x-small; margin-left: 3px">- Développement personnel<br>- Histoire<br>- Aventure<br>- Fantaisie</p>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-2">
+                                    <img src="../../static/img/vitrine/ballon.png" width="30px" height="30px">
+                                </div>
+                                <div class="col-md-10">
+                                    <span style="font-size: medium; color: #ff9c00;">Football</span>
+                                    <p style="font-size:x-small; margin-left: 3px">- Activité sportive loisir<br>- Supporteur de l'Olympique Lyonnais</p>
+                                </div>
+                            </div>
                         </div>
-                        <div>
-                            <span style="font-size: medium; color: #ff9c00;">Blockchain</span>
-                            <p style="font-size:x-small; margin-left: 3px">- NFT<br>- Metaverse<br>- Play To Earn</p>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-2">
+                                    <img src="../../static/img/vitrine/blockchain.png" width="30px" height="30px">
+                                </div>
+                                <div class="col-md-10">
+                                    <span style="font-size: medium; color: #ff9c00;">Blockchain</span>
+                                    <p style="font-size:x-small; margin-left: 3px">- NFT<br>- Metaverse<br>- Play To Earn</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
