--- a/portfolio/vitrine/templates/vitrine/index.html
+++ b/portfolio/vitrine/templates/vitrine/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <!-- Center col -->
                 <div class="col-md-6">
-                    <h2 style="font-size:x-large">Expériences</h2>
+                    <h2 style="font-size:x-large">Projets</h2>
                     <div class="container bg-light" style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
                         <h3 style="font-size:large; color: #ff9c00;">My-Portfolio</h3>
                         <p>Mon portfolio personnel https://alpha-mavamalonga.herokuapp.com/ qui présente certains de mes projets github ainsi que mon CV et mes compétences techniques.<br>
@@ -65,10 +65,13 @@
                         <p>Application web pour un club de football. (projet en cours de développement)<br>
                         <span>Mes fonctions :</span></p>
                         <ul style="margin-top: -2%; padding-bottom: 10px;">
-                            <li>Gérer la production de code en utilisant la méthodologie CI/CD avec CircleCi</li>
-                            <li>Mettre en place un système de contrôle des codes en utilisant Sentry</li>
-                            <li>Refactoriser une application pour réduire la dette technique</li>
+                            <li>Rédigez les spécifications détaillées d'un projet</li>
+                            <li>Mettre en oeuvre une base de données sécurisée avec Django ORM et PostgreSQL</li>
+                            <li>Créer une API RESTful avec Django REST</li>
+                            <li>Sécuriser une API afin qu'elle respecte les normes OWASP et RGPD</li>
                             <li>Appliquez une architecture modulaire dans une application Python</li>
+                            <li>Mettre en place un système de contrôle des codes en utilisant Sentry</li>
+                            <li>Gérer la production de code en utilisant la méthodologie CI/CD avec CircleCi</li>
                             <li>Déployer une application en utilisant Heroku</li>
                         </ul>
                     </div>
@@ -79,20 +82,20 @@
                         <p style="padding-bottom: 10px;">
                             Spécialisation en développement d'application python via Openclassrooms.<br>
                             La formation Openclassrooms se découpe en 13 projets professionalisant d'une complexité croissante, essentielement des projet faite en python.
-                            Ce parcours forme à un métier de développeur back-end python, en plus de python on voit des technos telles que SQL, Javascript,
-                            les conteneur avec Docker et l'automatisation des taches CI/CD avec Circle et Heroku.</p>
+                            Ce parcours forme à un métier de développeur back-end python en plus de python, on voit des technologies telles que le SQL, Javascript,
+                            les conteneurs avec Docker, l'automatisation des tâches CI/CD avec Circle et Heroku.</p>
                     </div>
                     <div class="container bg-light" style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
                         <h3 style="font-size:large; color: #ff9c00;">Licence Science pour l'Ingénieur (SPI)</h3>
                         <b>Paris Saclay - 2017 à 2020</b>
                         <p style="padding-bottom: 10px;">Découverte de l'informatique.
-                            La licence m'a apportée les bases de la programmation (les structures conditionnels, les boucles, les variables).
-                            J'ai écris mes 1er lignes de code avec le langage processing, par la suite, j'ai fais de l'assembleur et des projets de modélisation en python.</p>
+                            La licence m'a apportée les bases de la programmation (les structures conditionnelles, les boucles, les variables),
+                            j'ai écrit mes premières lignes de code avec le langage Processing, par la suite, j'ai fais de l'assembleur et des projets de modélisation en python.</p>
                     </div>
                     <div class="container bg-light" style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
                         <h3 style="font-size:large; color: #ff9c00;">Bac Scientifique (S)</h3>
                         <b>Lycée Maurice Eliot - 2014 à 2017</b>
-                        <p style="padding-bottom: 10px;">Enseignement scientifique : mathématiques, algorithmes, physique chimie, SVT...<br></p>
+                        <p style="padding-bottom: 10px;">Enseignement scientifique : mathématiques, algorithmes, physique chimie, SVT...<br>Initialisation à la programmation avec Casio Basic programming</p>
                     </div>
                 </div>
                 <!-- Right col-->
