--- a/portfolio/vitrine/templates/vitrine/mentions.html
+++ b/portfolio/vitrine/templates/vitrine/mentions.html
@@ -13,11 +13,11 @@
         </div>
         <div class="container">
             <h1>PRÉSENTATION</h1>
-            <p>Ce site est le site personnel de Ludovic Scribe qui est donc à la fois le responsable du site et le responsable des publications. Le site est fièrement propulsé par WordPress, son design est inspiré du thème Bootstrap Business Casual.</p>
+            <p>Ce site est le site personnel de MAVA MALONGA Alpha qui est donc à la fois le responsable du site et le responsable des publications. Le site est fièrement propulsé par Heroku, son design est inspiré du site suivant : https://www.doyoubuzz.com/benjamin-zak/cv/jobs</p>
         </div>
         <div class="container">
             <h1>HÉBERGEMENT</h1>
-            <p>L’hébergeur de ce site est 1&1 Internet SARL – 7 place de la Gare – BP 70109 – 57201 Sarreguemines Cedex.</p>
+            <p>L’hébergeur de ce site est Heroku</p>
         </div>
         <div class="container">
             <h1>RESPONSABILITÉS</h1>
