--- a/portfolio/vitrine/templates/vitrine/mentions.html
+++ b/portfolio/vitrine/templates/vitrine/mentions.html
@@ -6,14 +6,14 @@
             font-size: medium;
         }
     </style>
-    <div class="container bg-light">
+    <div class="container">
         <div class="container">
             <h1>MENTIONS LÉGALES</h1>
             <p>L’utilisation de ce site implique l’acceptation pleine et entière des conditions générales d’utilisation décrite ci-après. Ces conditions d’utilisation sont susceptibles d’être modifiées ou complétées à tout moment, vous êtes donc invités à les consulter de manière régulière.</p>
         </div>
         <div class="container">
             <h1>PRÉSENTATION</h1>
-            <p>Ce site est le site personnel de MAVA MALONGA Alpha qui est donc à la fois le responsable du site et le responsable des publications. Le site est fièrement propulsé par Heroku, son design est inspiré du site suivant : https://www.doyoubuzz.com/benjamin-zak/cv/jobs</p>
+            <p>Ce site est le site personnel de MAVA MALONGA Alpha qui est donc à la fois le responsable du site et le responsable des publications. Le site est fièrement propulsé par Heroku, son design est inspiré du site suivant : <a href="https://www.doyoubuzz.com/benjamin-zak/cv/jobs">https://www.doyoubuzz.com/benjamin-zak/cv/jobs</a></p>
         </div>
         <div class="container">
             <h1>HÉBERGEMENT</h1>
@@ -29,7 +29,7 @@
         </div>
         <div class="container">
             <h1>DONNÉES PERSONNELLES</h1>
-            <p>L’éditeur de ce site s’engage à ne jamais communiquer vos informations personnelles à un tiers et à ne pas les revendre. Conformément à la loi « informatique et libertés » du 6 janvier 1978 modifiée en 2004, vous bénéficiez d’un droit d’accès et de rectification aux informations qui vous concernent. Pour exercer ce droit, il vous suffit d’envoyer un e-mail à l’adresse suivante : contact@ludovicscribe.fr.</p>
+            <p>L’éditeur de ce site s’engage à ne jamais communiquer vos informations personnelles à un tiers et à ne pas les revendre. Conformément à la loi « informatique et libertés » du 6 janvier 1978 modifiée en 2004, vous bénéficiez d’un droit d’accès et de rectification aux informations qui vous concernent. Pour exercer ce droit, il vous suffit d’envoyer un e-mail à l’adresse suivante : <a href="mailto: mavamalonga.alpha@gmail.com">mavamalonga.alpha@gmail.com</a></p>
         </div>
         <div class="container">
             <h1>MODÉRATION DES COMMENTAIRES</h1>
