--- a/templates/base.html
+++ b/templates/base.html
@@ -29,11 +29,11 @@
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav">
                             <a href="{% url 'index' %}" class="nav-item nav-link active" style="font-weight:bold;">Acceuil</a>
-                            <a href="{% url 'blogs' %}" class="nav-item nav-link" style="font-weight:bold;">Projets</a>
-                            <a href="{% url 'blogs' %}" class="nav-item nav-link" style="font-weight:bold;">Blog</a>
+                            <a href="#" class="nav-item nav-link" style="font-weight:bold;">Réalisation</a>
+                            <a href="#" class="nav-item nav-link" style="font-weight:bold;">Blog</a>
                         </div>
                         <div class="navbar-nav ms-auto">
-                            <a href="{% url 'blogs' %}" class="nav-item nav-link" style="font-weight:bold;">Télécharger mon CV</a>
+                            <a href="#" class="nav-item nav-link" style="font-weight:bold;">Télécharger mon CV</a>
                         </div>
                     </div>
                 </div>
