--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -10,44 +10,38 @@
                         <div class="row">
                           <div class="col-sm-4">
                             <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
-                            <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium; color: #ff9c00;">FIRMWARE XIAOMI MI BAND 3<br><span class="link-dark" style="font-size: 13px;">Publié le 13/06</span></h3>
-                            <p width="100%" class="link-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum [...]</p>
+                            <img src="../../static/img/oc_lettings.png" width="100%">
+                            <p width="100%" class="link-dark">Mettez à l'échelle une application Django en utilisant une architecture modulaire</p>
                             </a>
                           </div>
                           <div class="col-sm-4">
                             <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
-                            <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium; color: #ff9c00;">FIRMWARE XIAOMI MI BAND 3<br><span class="link-dark" style="font-size: 13px;">Publié le 13/06</span></h3>
-                            <p width="100%" class="link-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum [...]</p>
+                            <img src="../../static/img/epic.png" width="100%">
+                            <p width="100%" class="link-dark">Développez une architecture back-end sécurisée en utilisant Django ORM</p>
                             </a>
                           </div>
                           <div class="col-sm-4">
                             <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
-                            <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium; color: #ff9c00;">FIRMWARE XIAOMI MI BAND 3<br><span class="link-dark" style="font-size: 13px;">Publié le 13/06</span></h3>
-                            <p width="100%" class="link-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum [...]</p>
+                            <img src="../../static/img/gudlft.png" width="100%">
+                            <p width="100%" class="link-dark">Améliorez une application Web Python par des tests et du débogage</p>
                             </a>
                           </div>
                           <div class="col-sm-4">
                             <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
-                            <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium; color: #ff9c00;">FIRMWARE XIAOMI MI BAND 3<br><span class="link-dark" style="font-size: 13px;">Publié le 13/06</span></h3>
-                            <p width="100%" class="link-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum [...]</p>
+                            <img src="../../static/img/soft.png" width="100%">
+                            <p width="100%" class="link-dark">Créez une API sécurisée RESTful en utilisant Django REST</p>
                             </a>
                           </div>
                           <div class="col-sm-4">
                             <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
-                            <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium; color: #ff9c00;">FIRMWARE XIAOMI MI BAND 3<br><span class="link-dark" style="font-size: 13px;">Publié le 13/06</span></h3>
-                            <p width="100%" class="link-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum [...]</p>
+                            <img src="../../static/img/litreview.png" width="100%">
+                            <p width="100%" class="link-dark">Développez une application Web en utilisant Django</p>
                             </a>
                           </div>
                           <div class="col-sm-4">
                             <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
-                            <img src="../../static/img/article.jpg" width="100%">
-                            <h3 style="font-size: medium; color: #ff9c00;">FIRMWARE XIAOMI MI BAND 3<br><span class="link-dark" style="font-size: 13px;">Publié le 13/06</span></h3>
-                            <p width="100%" class="link-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit... Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum [...]</p>
+                            <img src="../../static/img/juststreamit.png" width="100%">
+                            <p width="100%" class="link-dark">Développez une interface utilisateur pour une application web Python</p>
                             </a>
                           </div>
                         </div>
@@ -57,25 +51,13 @@
                 <div class="col-md-3">
                     <h2 class="bg-light" style="font-size:x-large;">Catégories</h2>
                     <div class="bg-light" style="margin-bottom: 10px;">
-                        <span style="list-style-type: none; margin-left: 3px;"><a href="#">Astuces</a></span><br>
-                        <span style="list-style-type: none; margin-left: 3px;"><a href="#">Développement</a></span><br>
-                        <span style="list-style-type: none; margin-left: 3px;"><a href="#">Événements</a></span><br>
-                        <span style="list-style-type: none; margin-left: 3px;"><a href="#">Blockchain</a></span><br>
-                        <span style="list-style-type: none; margin-left: 3px;"><a href="#">Divers</a></span><br>
-                    </div>
-                    <h2 class="bg-light" style="font-size:x-large;">Les derniers articles</h2>
-                    <div class="bg-light">
-                      <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
-                      <hr>
-                      <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
-                      <hr>
-                      <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
-                      <hr>
-                      <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
-                      <hr>
-                      <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
-                      <hr>
-                      <span style="font-size: small; list-style-type: none; margin-left: 3px;"><a href="#">23/09 - Blog : Stage de la Toussaint</a></span><br>
+                      <ul>
+                        <li><span style="list-style-type: none; margin-left: 3px;"><a href="#">Astuces</a></span><br></li>
+                        <li><span style="list-style-type: none; margin-left: 3px;"><a href="#">Développement</a></span><br></li>
+                        <li><span style="list-style-type: none; margin-left: 3px;"><a href="#">Événements</a></span><br></li>
+                        <li><span style="list-style-type: none; margin-left: 3px;"><a href="#">Blockchain</a></span><br></li>
+                        <li><span style="list-style-type: none; margin-left: 3px;"><a href="#">Divers</a></span><br></li>
+                      </ul>
                     </div>
                 </div>
             </div>
