--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav">
                             <a href="{% url 'index' %}" class="nav-item nav-link active" style="font-weight:bold;">Acceuil</a>
-                            <a href="#" class="nav-item nav-link" style="font-weight:bold;">Réalisation</a>
+                            <a href="{% url 'blogs' %}" class="nav-item nav-link" style="font-weight:bold;">Réalisation</a>
                             <a href="#" class="nav-item nav-link" style="font-weight:bold;">Blog</a>
                         </div>
                         <div class="navbar-nav ms-auto">
