--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -44,6 +44,24 @@
                             <p width="100%" class="link-dark">Développez une interface utilisateur pour une application web Python</p>
                             </a>
                           </div>
+                          <div class="col-sm-4">
+                            <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
+                            <img src="../../static/img/juststreamit.png" width="100%">
+                            <p width="100%" class="link-dark">Développez une interface utilisateur pour une application web Python</p>
+                            </a>
+                          </div>
+                          <div class="col-sm-4">
+                            <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
+                            <img src="../../static/img/juststreamit.png" width="100%">
+                            <p width="100%" class="link-dark">Développez une interface utilisateur pour une application web Python</p>
+                            </a>
+                          </div>
+                          <div class="col-sm-4">
+                            <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
+                            <img src="../../static/img/juststreamit.png" width="100%">
+                            <p width="100%" class="link-dark">Développez une interface utilisateur pour une application web Python</p>
+                            </a>
+                          </div>
                         </div>
                       </div>
                 </div>
@@ -63,4 +81,23 @@
             </div>
         </div>
     </div>
+
+    <!-- Pagination -->
+    <nav aria-label="..." style="margin-left: 28%; margin-top: 50px;">
+      <ul class="pagination">
+        <li class="page-item disabled">
+          <span class="page-link">Previous</span>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item active">
+          <span class="page-link">
+            2
+          </span>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#">Next</a>
+        </li>
+      </ul>
+    </nav>
 {% endblock %}
