--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -46,20 +46,20 @@
                           </div>
                           <div class="col-sm-4">
                             <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
-                            <img src="../../static/img/juststreamit.png" width="100%">
-                            <p width="100%" class="link-dark">Développez une interface utilisateur pour une application web Python</p>
+                            <img src="../../static/img/learn.png" width="100%">
+                            <p width="100%" class="link-dark">Designez une application Python adaptée aux besoins d'un client</p>
                             </a>
                           </div>
                           <div class="col-sm-4">
                             <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
-                            <img src="../../static/img/juststreamit.png" width="100%">
-                            <p width="100%" class="link-dark">Développez une interface utilisateur pour une application web Python</p>
+                            <img src="../../static/img/echec.png" width="100%">
+                            <p width="100%" class="link-dark">Développez un programme logiciel en Python</p>
                             </a>
                           </div>
                           <div class="col-sm-4">
                             <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
-                            <img src="../../static/img/juststreamit.png" width="100%">
-                            <p width="100%" class="link-dark">Développez une interface utilisateur pour une application web Python</p>
+                            <img src="../../static/img/algo.png" width="100%">
+                            <p width="100%" class="link-dark">Résolvez des problèmes en utilisant des algorithmes en Python</p>
                             </a>
                           </div>
                         </div>
@@ -67,9 +67,9 @@
                 </div>
                 <!-- Right col-->
                 <div class="col-md-3">
-                    <h2 class="bg-light" style="font-size:x-large;">Catégories</h2>
-                    <div class="bg-light" style="margin-bottom: 10px;">
-                      <ul>
+                    <h2 class="" style="font-size:x-large;">Catégories</h2>
+                    <div class="" style="margin-bottom: 10px;">
+                      <ul style="list-style: none;">
                         <li><span style="list-style-type: none; margin-left: 3px;"><a href="#">Astuces</a></span><br></li>
                         <li><span style="list-style-type: none; margin-left: 3px;"><a href="#">Développement</a></span><br></li>
                         <li><span style="list-style-type: none; margin-left: 3px;"><a href="#">Événements</a></span><br></li>
